<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:seekbar="http://schemas.moonlight-stream.com/apk/res/seekbar">

    <PreferenceCategory
        android:key="category_vr_settings"
        android:title="@string/category_vr_settings">
        <CheckBoxPreference
            android:key="checkbox_vr_pointer"
            android:title="@string/title_vr_pointer"
            android:summary="@string/summary_vr_pointer"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="checkbox_vr_gaze"
            android:title="@string/title_vr_gaze"
            android:summary="@string/summary_vr_gaze"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="checkbox_vr_hand_tracking"
            android:title="@string/title_vr_hand_tracking"
            android:summary="@string/summary_vr_hand_tracking"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="checkbox_vr_passthrough"
            android:title="@string/title_vr_passthrough"
            android:summary="@string/summary_vr_passthrough"
            android:defaultValue="false" />
        <ListPreference
            android:key="list_vr_depth_source"
            android:title="@string/title_vr_depth_source"
            android:entries="@array/vr_depth_source_names"
            android:entryValues="@array/vr_depth_source_values"
            android:summary="@string/summary_vr_depth_source"
            android:defaultValue="model" />
        <ListPreference
            android:key="list_vr_env_res"
            android:title="@string/title_vr_env_res"
            android:entries="@array/vr_env_res_names"
            android:entryValues="@array/vr_env_res_values"
            android:summary="@string/summary_vr_env_res"
            android:defaultValue="standard" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_vr_tuning"
        android:title="@string/category_vr_debug">
        <com.limelight.preferences.SeekBarPreference
            android:key="seekbar_vr_inference_cadence"
            android:defaultValue="3"
            seekbar:min="1"
            android:max="6"
            android:summary="@string/summary_seekbar_vr_inference_cadence"
            android:text="@string/suffix_seekbar_vr_inference_cadence"
            android:title="@string/title_seekbar_vr_inference_cadence" />
        <CheckBoxPreference
            android:key="checkbox_vr_depth_debug"
            android:title="@string/title_vr_depth_debug"
            android:summary="@string/summary_vr_depth_debug"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="checkbox_vr_eye_swap"
            android:title="@string/title_vr_eye_swap"
            android:summary="@string/summary_vr_eye_swap"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="checkbox_enable_perf_overlay"
            android:title="@string/title_enable_perf_overlay"
            android:summary="@string/summary_enable_perf_overlay"
            android:defaultValue="false" />
        <ListPreference
            android:key="list_vr_file_log"
            android:title="@string/title_vr_file_log"
            android:entries="@array/vr_file_log_names"
            android:entryValues="@array/vr_file_log_values"
            android:summary="@string/summary_vr_file_log"
            android:defaultValue="basic" />
        <Preference
            android:key="pref_bug_report"
            android:title="@string/title_bug_report"
            android:summary="@string/summary_bug_report" />
    </PreferenceCategory>
</PreferenceScreen>
